# contractor

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  ISSUES.md  README.md  RESUME.md  TODO.md  deps.slices.json  insights.md  main.py  pyproject.toml
.github/workflows/: ci.yml
agents/code_analysis_agent/: agent.py
agents/code_analysis_agent/models/: code_models.py
agents/code_analysis_agent/prompts/: __init__.py  code_analysis_prompts.py
agents/project_information_agent/: agent.py
agents/project_information_agent/models/: __init__.py  project_information.py
agents/project_information_agent/prompts/: __init__.py  dependency_filtering.py
agents/project_manager_agent/: agent.py
agents/swe_agent/: agent.py
analytics_ui/: __init__.py  __main__.py  comments.py  evals.py  graph.py  reader.py  registry.py  server.py  tools_introspect.py
analytics_ui/static/: app.js  charts.js  index.html  styles.css
cli/: __init__.py  fs.py  helpers.py  main.py  metrics.py  render.py  ui.py  utils.py
cli/dummy_agents/dummy_fs_swe/: agent.py
cli/dummy_agents/dummy_oas_builder/: agent.py
cli/pipelines/: __init__.py  chat.py  config.py  exploitability.py  likec4_building.py  oas_building.py  oas_enrichment.py  router.py  trace_annotation.py  trace_annotation_direct.py  trace_graph.py  trace_graph_pathpar.py  trace_verify.py  vuln_assess.py  vuln_scan.py  vuln_scan_fast.py  vuln_scan_trace.py
contractor/: main.py
contractor/agent/: .env.example  agent.py
contractor/agent/instructions/: __init__.py  instructions.py
contractor/agent/models/: __init__.py  project_analysis.py
contractor/agents/: worker_factory.py
contractor/agents/chat_agent/: __init__.py  models.py
contractor/agents/code_graph_agent/: __init__.py  agent.py  prompt.yml
contractor/agents/codereview_agent/: agent.py  prompt.yml
contractor/agents/dummy/: agent.py
contractor/agents/dummy_callbacks/: agent.py
contractor/agents/dummy_fs_swe/: agent.py
contractor/agents/dummy_fs_swe_taskmgr/: agent.py
contractor/agents/dummy_http/: agent.py
contractor/agents/dummy_oas_builder/: agent.py
contractor/agents/dummy_swe/: agent.py
contractor/agents/dummy_swe_taskmgr/: agent.py
contractor/agents/exploitability_agent/: agent.py  prompt.yml
contractor/agents/fs_swe_taskmgr/: agent.py
contractor/agents/http_agent/: agent.py  prompt.yml
contractor/agents/likec4_builder_agent/: agent.py  prompt.yml
contractor/callbacks/: __init__.py  adapter.py  base.py  context.py  guardrails.py  middleware.py  ratelimits.py  tokens.py
contractor/format/: containers.py  utils.py
contractor/instructions/: global.py
contractor/models/: task.py
contractor/runners/: _helpers.py  agent_runner.py  agio.py  artifacts.py  chat_runner.py  metrics_plugin.py  models.py  skills.py  swe_runner.py  task_runner.py  trace_plugin.py
contractor/tasks/: dependency_information.yml  exploitability_assessment.yml  likec4_build.yml  likec4_validate.yml  oas_bootstrap.yml  oas_coverage.yml  oas_enrich.yml  oas_enrich_experimental.yml  oas_update.yml  oas_update_experimental.yml  oas_validate.yml  project_information.yml  project_information_experimental.yml  sink_nomination.yml  threat_analysis.yml  trace_annotation.yml  trace_annotation_experimental.yml  trace_annotation_new.yml  trace_experimental.yml  trace_operation.yml  trace_verify.yml  vuln_analytics.yml  vuln_scan.yml  vuln_scan_fast.yml
contractor/tools/: __init__.py  caido.py  cdxgen.py  fs.py  http.py  likec4.py  memory.py  observations.py  openapi.py  podman.py  result.py  serena.py  tasks.py  tasks_.py  vuln.py
contractor/tools/code/: graph.py  (+3 more)
contractor/utils/: __init__.py  dictutils.py  formatting.py  fs.py  observability.py  prompt.py  settings.py
contractor/workflows/: README.md  __init__.py  config.py  findings.py  namespaces.py  path_groups.py
data/db/: session.db
data/outputs/: project_dependencies.json
deploy/: Dockerfile
deploy/litellm/: litellm_config.yaml  run.sh
deploy/sandbox/: Dockerfile  build.sh
docs/: README.md  TUNABLE_PARAMS.md  arch.likec4  eval-tuning.md  insights-parallel-vuln-pipelines.md  planner.md  shannon-workflow-design.md  tuning.md
helpers/: llm.py  settings.py
scripts/: README.md  ab_matrix_trace.py  ab_oas_build_task.py  ab_trace_task.py  analyze_metrics.py  analyze_vuln_eval.py  caido_auth.py  compare.py  compare_ab_eval.py  compare_eval_runs.py  compare_exploit_variants.py  compare_task_runs.py  debug_code_graph_run.py  diagnose.py  dump_langfuse_trace.py  eval_sweep.py  exploit_eval_report.py  measure_trailmark.py  migrate_eval_results.py  precompute_task_artifacts.py  prepare_vuln_benchmarks.py  probe_trace.py  probe_variance.py  rebuild_eval_envelope.py  rebuild_xbow_envelope.py  run_ab_limit_eval.sh  run_exploit_eval.py  run_pass3_hashform.sh  run_pipeline_vuln_eval.py  run_threat_crapi.sh  run_trace_task_eval.py  run_vuln_eval.py  score_threat_reports.py  score_trace_task_vulns.py  visualize_subtasks.py  vuln_eval_report.py  xbow_codeexec_report.py  xbow_consecutive.sh  xbow_fix_base.sh
tests/contractor/: helpers.py
tests/eval/: README.md  adk_evals.py  conftest.py  containers.py  exploitability_harness.py  harness.py  planner_scoring.py  results.py  scenarios.py  scorers.py  scoring.py  task_harness.py  test_code_graph_agent_eval.py  test_exploitability_eval.py  test_exploitability_task_eval.py  test_likec4_task_eval.py  test_oas_analyzer_eval.py  test_oas_build_task_eval.py  test_oas_builder_eval.py  test_oas_enrich_task_eval.py  test_planner_eval.py  test_project_information_task_eval.py  test_swe_agent_eval.py  test_threat_analysis_task_eval.py  test_trace_agent_eval.py  test_trace_parallel_eval.py  test_vuln_detection_eval.py  test_xbow_eval.py  trace_harness.py  trace_vuln_scoring.py  vuln_scan_harness.py  xbow.py
tests/integrational/: test_task_runner_integration.py
tools/: __init__.py  cdxgen.py  files.py  save_tools.py  serena.py  vacuum.py
workflow/: .gitkeep  base.py  onboarding.py
workflow/code_analysis/: workflow.py
workflow/context_manager/: construct.py  context_manager.py
(+527 files in other folders)
