[project]
name = "contractor"
version = "0.1.0"
description = "Use llm to generate openapi specification from code"
readme = "README.md"
requires-python = ">=3.11,<3.15"
authors = [
    { name = "grauwolf32" }
]
dependencies = [
    "google-adk>=1.21.0,<2.0.0",
    "litellm>=1.80.12,<2.0.0",
    "langfuse>=3.11.2,<4.0.0",
    "openinference-instrumentation-google-adk>=0.1.8,<0.2.0",
    "pydantic>=2.12.5,<3.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "fsspec>=2026.1.0,<2027.0.0",
    "magika>=1.0.1,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "bs4 (>=0.0.2,<0.0.3)",
    "tree-sitter (>=0.25.2,<0.26.0)",
    "tree-sitter-language-pack (>=1.4.1,<2.0.0)",
]

[[tool.poetry.source]]
name = "registry.tcsbank.ru"
url = "https://nexus.tcsbank.ru/repository/pypi.python.org/simple/"

[[tool.poetry.source]]
name = "tinkoff"
url = "https://nexus.tcsbank.ru/repository/pypi-all/simple"
priority = "primary"

[project.scripts]
contractor = "cli.main:main"

[tool.poetry]
packages = [
  { include = "contractor" },
  { include = "cli" },
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
ruff = "^0.14.10"
isort = "^8.0.1"
mypy = "^1.19.1"
matplotlib = "^3.10.8"
pandas = "^3.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--strict-markers"
