[project]
name = "contractor"
version = "0.1.0"
description = "Use llm to generate openapi specification from code"
readme = "README.md"
requires-python = ">=3.12,<3.15"
authors = [
    { name = "grauwolf32" }
]
dependencies = [
    "google-adk>=2.1.0,<3.0.0",
    "litellm>=1.80.12,<2.0.0",
    "langfuse>=3.11.2,<4.0.0",
    "openinference-instrumentation-google-adk (>=0.1.15,<0.2.0)",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.13.0,<3.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "fsspec>=2026.1.0,<2027.0.0",
    "magika>=1.0.1,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "bs4 (>=0.0.2,<0.0.3)",
    "tree-sitter (>=0.25.2,<0.26.0)",
    "tree-sitter-language-pack (>=1.4.1,<2.0.0)",
    "trailmark (>=0.3.1,<0.4.0)",
    "rustworkx (>=0.17.1,<1.0.0)",
]

[project.scripts]
contractor = "cli.main:main"
analytics-ui = "analytics_ui.server:main"

[tool.poetry]
packages = [
  { include = "contractor" },
  { include = "cli" },
  { include = "analytics_ui" },
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
ruff = "^0.14.10"
mypy = "^1.19.1"
matplotlib = "^3.10.8"
pandas = "^3.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--strict-markers"
norecursedirs = ["tests/playground"]
markers = [
    "eval: end-to-end agent evaluation (slow, LLM-bound; opt in with `pytest -m eval` or CONTRACTOR_RUN_EVAL=1)",
]

[tool.ruff]
extend-exclude = ["tests/playground", ".claude"]

[tool.ruff.lint]
# E/F: defaults. I: import sorting (replaces standalone isort). UP: pyupgrade
# (PEP-604/585 annotations). B: bugbear (real-bug heuristics). C4: comprehensions.
# SIM: simplifications. RET: return-statement hygiene. PTH (pathlib) is held back
# deliberately — it touches the sandboxed fs layer and needs review, not autofix.
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RET"]
# Line length is left to author discretion (no formatter is wired up); enforcing
# E501 now would flag ~480 pre-existing long lines for no correctness gain.
# PEP-695 modernizations are deferred — the codebase has not adopted PEP-695
# generics/aliases anywhere yet. UP040 (`type` aliases) additionally rewrites
# pydantic-consumed aliases (e.g. SubtaskStatus) into lazy TypeAliasType, which
# is behaviour-sensitive. UP047 (generic functions) is held for consistency.
ignore = ["E501", "UP040", "UP047"]

[tool.ruff.lint.isort]
known-first-party = ["contractor", "cli", "analytics_ui"]

[tool.ruff.lint.per-file-ignores]
"cli/main.py" = ["E402"]
# Test/eval modules deliberately import after path setup or in sectioned blocks.
"tests/eval/test_exploitability_task_eval.py" = ["E402"]
"tests/units/contractor_tests/runners/test_models.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
files = ["contractor", "cli"]
# tests/playground (submodule) shadows stdlib `types`; tests/dummy_agents have
# duplicate top-level `agent` modules. Both break module resolution — exclude so
# `mypy .` works too, not just the default `files` set.
exclude = "^(tests/playground|tests/dummy_agents|\\.claude)/"
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["contractor", "cli"]
branch = true
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
